# xquery

./: .gitignore  Dockerfile  build-all-local.sh  build-all.sh  docker-compose.yml  stress.yaml
back/: .env  .gitignore  Cargo.toml  Dockerfile
back/entities/: Cargo.toml
back/entities/src/: lib.rs  log.rs  prelude.rs
back/migration/: Cargo.toml
back/migration/src/: lib.rs  m20220101_000001_create_logs.rs
back/src/: main.rs
back/src/auth/: errors.rs  handlers.rs  mod.rs
back/src/auth/backend/: ldap.rs
back/src/auth/middleware/: mod.rs
back/src/controller/: mod.rs
back/src/db/: mod.rs
back/src/db/entity/: address.rs  address_sdn.rs  aircraft_identity.rs  aircraft_operator.rs  aircraft_operator_sdn.rs  bic.rs  bic_sdn.rs  bik.rs  bik_sdn.rs  caatsa235.rs  caatsa235_sdn.rs  citizen.rs  citizen_sdn.rs  dateofissue.rs  ddc_alias.rs  ddc_alias_sdn.rs  ddc_bic.rs  ddc_bic_sdn.rs  ddc_imo.rs  ddc_imo_sdn.rs  ddc_name.rs  ddc_pgm.rs  dob.rs  dob_identity.rs  document.rs  document_identity.rs  email.rs  email_sdn.rs  eo13662dd.rs  eo13662dd_sdn.rs  eo13846inf.rs  eo13846inf_sdn.rs  eo14024dd.rs  eo14024dd_sdn.rs  equity_ticker.rs  equity_ticker_sdn.rs  former_vessel_flag.rs  former_vessel_flag_sdn.rs  isin.rs  isin_sdn.rs  (+31 more)
back/src/logger/: mod.rs
back/src/session/: mod.rs  store.rs
front/: .env  Dockerfile  build.sh  index.html  package-lock.json  package.json  t.css  vite.config.ts
front/src/: App.vue  main.ts
front/src/auth/: index.ts
front/src/auth/types/: user.ts
front/src/components/common/: NavBar.vue  NavItem.vue  TopBar.vue
front/src/components/query/: QueryInput.vue  QueryResult.vue
front/src/components/security/: AuthLogin.vue
front/src/components/topbar/: MenuAvatar.vue  MenuSettings.vue  TopBar.vue  TopBarBreadcrumb.vue
front/src/layouts/default/: Default.vue  View.vue
front/src/plugins/: index.ts
front/src/router/: breadcrumb.ts  index.ts
front/src/services/: index.ts
front/src/services/admin/: index.ts
front/src/services/auth/: index.ts
front/src/styles/: global.scss  theme.css
front/src/views/: Home.vue  Login.vue  Map.vue  Query.vue  Stats.vue
front/src/views/admin/: Admin.vue  Logs.vue
