[package]
name = "w"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6.1", features = [
    "json",
    "headers",
    "multipart",
    "macros",
] }
axum-extra = { version = "0.4.2", features = ["cookie-signed"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = [
    "fs",
    "trace",
    "cors",
    "set-header",
] }
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2.2" }
hyper = { version = "0.14", features = ["full"] }
tera = { version = "1.17" }
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
axum-sessions = "0.4.1"
time = "0.3.17"
anyhow = "1.0"

ldap3 = { version = "0.11.1", default-features = false, features = [
    "tls-rustls",
] }
redis = { version = "0.22", features = ["tokio-comp"] }
async-session = "3.0.0"
uuid = { version = "1.2", features = ["v4", "serde"] }
