[package]
name = "w"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "^0.1" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = [
    "json",
    "headers",
    "multipart",
    "macros",
] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
axum-extra = { version = "0.7", features = ["cookie-signed"] }
tokio = { version = "1.27", features = ["full"] }
tower-http = { version = "0.4", features = [
    "fs",
    "trace",
    "cors",
    "set-header",
] }
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2.2" }
hyper = { version = "0.14", features = ["full"] }
tera = { version = "1.18" }
lazy_static = "1.4.0"
rand = { version = "0.8", features = ["min_const_gen"] }
axum-sessions = "0.5.0"
time = "0.3"
anyhow = "1.0"
dotenvy = "0.15"

ldap3 = { version = "0.11", default-features = false, features = [
    "tls-rustls",
] }
redis = { version = "0.22", features = ["tokio-comp"] }
async-session = "3.0"
uuid = { version = "1.3", features = ["v4", "serde"] }


sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
